Доработка выполненных дел +  фикс кнопок

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="action-wrapper">
             <input type="text" id="input"> <button id="add_btn">Добавить дело</button>
             <div class="button_tasks">
-                <button id="honest_btn">Каждый четный элемент</button>
+                <button id="even_btn">Каждый четный элемент</button>
                 <button id="odd_btn">Каждый нечетный элемент</button>
                 <button id="delete_first_elem_btn">Удалить первый элемент</button>
                 <button id="delete_last_elem_btn">Удалить последний элемент</button>
